Update sample group URLs

--- a/rdaslides.dtx
+++ b/rdaslides.dtx
@@ -3343,7 +3343,8 @@ The final few sections each document a different separate helper package.
 \def\rdaGroupLogo{\MSDWGLogo[width=\hsize]}
 \def\rdaGroupName{Metadata Standards Catalog}
 \def\rdaGroupType{Working Group}
-\def\rdaGroupUrl{https://rd-alliance.org/groups/metadata-standards-catalog-working-group.html}
+\def\rdaGroupUrl{%
+  https://www.rd-alliance.org/groups/metadata-standards-catalog-working-group}
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -3367,7 +3368,7 @@ The final few sections each document a different separate helper package.
 \RequirePackage{rdamscwg}
 \def\rdaGroupName{Metadata Standards Directory}
 \def\rdaGroupUrl{%
-  https://rd-alliance.org/groups/metadata-standards-directory-working-group.html}
+  https://www.rd-alliance.org/groups/metadata-standards-directory-working-group}
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -3551,7 +3552,7 @@ The final few sections each document a different separate helper package.
 \def\rdaGroupLogo{\MIGLogo[width=\hsize]}
 \def\rdaGroupName{Metadata}
 \def\rdaGroupType{Interest Group}
-\def\rdaGroupUrl{https://www.rd-alliance.org/groups/metadata-ig.html}
+\def\rdaGroupUrl{https://www.rd-alliance.org/groups/metadata-ig}
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
